# hero-flow

./: .gitignore  El_viaje_del_héroe.md  Mejoras.txt  README.md  flow.md  pyproject.toml
db/: chroma.sqlite3
src/hero_journey/: main.py  types.py
src/hero_journey/crews/astrology_outline/: astrology_outline.py
src/hero_journey/crews/astrology_outline/config/: tasks.yaml
src/hero_journey/crews/astrology_outline_v4/: astrology_outline.py
src/hero_journey/crews/astrology_outline_v5/: astrology_outline.py
src/hero_journey/crews/book_writer/: book_writer.py
src/hero_journey/crews/narrative_outline/: narrative_outline.py
src/hero_journey/data/: SLA.json  aitor.json  ascendente.json  ascendentes.json  cleaned_SLA.json  cleaned_natal_chart.json  ejemplo_narrativa.md  ejemplo_outline.json  escenarios.json  escenarios_ACSol.json  escenarios_acuario.md  explicacion_escenarios.md  interpretacion_carta_natal_Kai.txt  kai_natal_chart.json  luna_sol.json  lunas.json  maestros.json  mercurio_marte_venus.json  miki_outline.md  outline_jan.md  outline_kai.md  plantilla_outline.json  signos.json  test_outline.md  viaje_astrologico.md
src/hero_journey/data/books/: Jan_v2_4o-mini.md  Jan_v3_4o-mini.md  Jan_v4_4o-mini_cumulative.md  Kai_v2_4o-mini.md  Kai_v3_4o-mini.md  Kai_v4_4o-mini_cumulative.md  Kai_v4_4o-mini_no_cumulative.md  Miriam_v4o-mini_cumulative.md  Roy_v3_4o-mini.md  Roy_v4_4o-mini_cumulative.md  miguel.md
src/hero_journey/tools/: api_tool.py  customFileReadTool.py  herramienta_simple.py  natal_chart_api_tool.py
(+10 files in other folders)
