[project]
name = "hero_journey"
version = "0.1.0"
description = "hero_journey using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
]

[project.scripts]
kickoff = "hero_journey.main:kickoff"
plot = "hero_journey.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
